[gd_scene load_steps=6 format=3 uid="uid://b65vw3mgc3gww"]

[ext_resource type="Texture2D" uid="uid://b86h3gv6212hq" path="res://Assets/opcje menu1.png" id="1_4tmxy"]
[ext_resource type="PackedScene" uid="uid://3cw2pi4d5jnf" path="res://Scenes/back_to_menu.tscn" id="1_5v8ap"]
[ext_resource type="Script" uid="uid://83d8846do3g6" path="res://Scripts/options.gd" id="1_ww8vx"]
[ext_resource type="Texture2D" uid="uid://b1sabhx8t2471" path="res://Assets/opcje menu2.png" id="2_qyyw6"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ww8vx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_4tmxy")
}, {
"duration": 1.0,
"texture": ExtResource("2_qyyw6")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_ww8vx")

[node name="backToMainMenu" parent="." instance=ExtResource("1_5v8ap")]
offset_left = 1403.0
offset_top = 854.99994
offset_right = 1880.9696
offset_bottom = 1007.57556
rotation = 0.11497444
text = ""

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(960, 540)
sprite_frames = SubResource("SpriteFrames_ww8vx")
autoplay = "default"

[node name="mainvolume" type="HSlider" parent="AnimatedSprite2D"]
custom_minimum_size = Vector2(350, 0)
offset_left = -285.0
offset_top = -49.0
offset_right = 284.0
offset_bottom = -33.0
size_flags_horizontal = 4
min_value = 1.0
max_value = 2.0
step = 0.1
value = 1.0

[node name="sfxvolume" type="HSlider" parent="AnimatedSprite2D"]
custom_minimum_size = Vector2(350, 0)
offset_left = -285.0
offset_top = 136.0
offset_right = 284.0
offset_bottom = 152.0
size_flags_horizontal = 4
min_value = 1.0
max_value = 2.0
step = 0.1
value = 1.0

[node name="musicvolume" type="HSlider" parent="AnimatedSprite2D"]
custom_minimum_size = Vector2(350, 0)
offset_left = -285.0
offset_top = 305.0
offset_right = 284.0
offset_bottom = 321.0
size_flags_horizontal = 4
min_value = 1.0
max_value = 2.0
step = 0.1
value = 1.0

[connection signal="button_down" from="backToMainMenu" to="backToMainMenu" method="_on_button_down"]
[connection signal="changed" from="AnimatedSprite2D/mainvolume" to="." method="_on_mainvolume_changed"]
[connection signal="mouse_exited" from="AnimatedSprite2D/mainvolume" to="." method="_on_mainvolume_mouse_exited"]
[connection signal="mouse_exited" from="AnimatedSprite2D/sfxvolume" to="." method="_on_sfxvolume_mouse_exited"]
[connection signal="mouse_exited" from="AnimatedSprite2D/musicvolume" to="." method="_on_musicvolume_mouse_exited"]
